import { Field, ObjectType, ID, Float, Int } from "type-graphql";
import { Experiance } from "../types/Experiance";
import { Difficulty } from "../types/Difficulty";
import { User } from "./User";

@ObjectType()
export class Campaign {
  @Field(() => String)
  id: string;

  @Field()
  createdAt: Date;

  @Field()
  updatedAt: Date;

  @Field()
  gmId: string;

  @Field()
  summary: string;

  @Field({ nullable: true })
  additional_details?: string;

  @Field({ nullable: true })
  note?: string;

  @Field()
  image: string;

  @Field()
  isOnline: boolean;

  @Field()
  city: string;

  @Field()
  state: string;

  @Field()
  lat: number;

  @Field()
  lng: number;

  @Field({ nullable: true })
  geolocation_lat?: number;

  @Field({ nullable: true })
  geolocation_lng?: number;

  @Field()
  startDate: Date;

  @Field()
  endDate: Date;

  @Field((_type) => [String])
  days: string[];

  @Field((_type) => [String])
  time_periods: string[];

  @Field()
  game_system: string;

  @Field((_type) => Experiance)
  experiance: Experiance;

  @Field({ nullable: true })
  voip_system?: string;

  @Field()
  max_seats: number;

  @Field((_type) => Difficulty)
  puzzles: Difficulty;

  @Field((_type) => Difficulty)
  combat: Difficulty;

  @Field((_type) => Difficulty)
  roleplay: Difficulty;

  @Field((_type) => User)
  game_master: User;

  @Field((_type) => [User])
  players: User[];

  @Field((_type) => [String])
  tags: string[];

  @Field({ nullable: true })
  price?: number;

  // skip overwrite 👇
}
