//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table accounts {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  oauth_token_secret String
  oauth_token String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table sessions {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table verificationtokens {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table users {
  id String [pk]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique]
  emailVerified DateTime
  image String
  firstName String [not null]
  lastName String [not null]
  experience String [not null]
  twitter String
  facebook String
  discord String
  youtube String
  status StatusType [not null, default: 'ONLINE']
  accounts Account [not null]
  sessions Session [not null]
  reviews Review [not null]
  Campaign Campaign [not null]
  Hosted Campaign [not null]
  campaignId String
}

Table campaigns {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  gmId String [not null]
  summary String [not null]
  additional_details String
  note String
  image String [not null]
  isOnline Boolean [not null]
  city String [not null]
  state String [not null]
  lat Float [not null]
  lng Float [not null]
  geolocation_lat Float
  geolocation_lng Float
  startDate DateTime [not null]
  endDate DateTime [not null]
  days String[] [not null]
  time_periods String[] [not null]
  game_system String [not null]
  experiance Experiance [not null, default: 'All']
  voip_system String
  max_seats Int [not null]
  puzzles Difficulty [not null, default: 'Any']
  combat Difficulty [not null, default: 'Any']
  roleplay Difficulty [not null, default: 'Any']
  game_master User [not null]
  players User [not null]
  tags String[] [not null]
  price Float
}

Table reviews {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  rating Int [not null]
  comment String [not null]
  userId String [not null]
  user User [not null]
}

Table spatial_ref_sys {
  srid Int [pk]
  auth_name String
  auth_srid Int
  srtext String
  proj4text String
}

Table players {
  campaignId String [ref: > Campaign.id]
  playersId String [ref: > User.id]
}

Enum Difficulty {
  Low
  Medium
  High
  Any
}

Enum Experiance {
  Beginner
  Advanced
  All
}

Enum StatusType {
  ONLINE
  IDLE
  DND
  OFFLINE
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Campaign.gmId > User.id

Ref: Review.userId > User.id